# polar-gini-curve

./: .gitignore  MIGRATION.md  README.md  app.py  custom.css  display.html  index.py  main.py  pyproject.toml  requirements.txt  upload.html
.github/workflows/: ci.yml
docs/: gini.md  legacy_conversion.md  tsne.md
examples/: legacy_converter.py  pgc_rmsd_simulation.py  rmsd_simulation.py
src/polargini/: __init__.py  cli.py  io.py  metrics.py  pgc.py  plotting.py  preprocessing.py  stats.py
static/: custom.css
templates/: base.html  display.html  explanation.html  home.html  tsne_display.html  tsne_upload.html  upload.html
tests/: conftest.py  test_cli.py  test_extra_coverage.py  test_legacy_io.py  test_metrics.py  test_pgc.py  test_stats.py  test_utils.py
util/: graph_tsne.py  polar_gini_curves.py  render_markdown.py
